--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,22 +1,21 @@
-<h3 class="ui center aligned header" id="category-header">Trending</h3>
+{{!-- <h3 class="ui center aligned header" id="category-header">Trending</h3>
 <div class="ui stackable two column divided grid container">
-  <div class="row">
-    <div class="column">
-      <div class="ui-segment">
+    <div class="row">
+        <div class="column">
+            <div class="ui-segment">
             <a href="/outdoor">
-                <h4> #Outdoor Actvities</h4>
-            </a>
-      </div>
-    </div>
-    <div class="column">
-      <div class="ui-segment">
+    <h3 class="ui center aligned header" id="category-header">Outdoor Activity</h3>            </a>
+            </div>
+        </div>
+        <div class="column">
+            <div class="ui-segment"> 
             <a href="/virtual">
-                <h4>#Virtual Actvities</h4>
+            <h3 class="ui center aligned header" id="category-header">Virtual Activity</h3>    
             </a>
-      </div>
+            </div>
+        </div>
     </div>
-  </div>
-</div>
+</div> --}}
 
 <div class="postbox">
     <div class="col-lg-12">
@@ -27,24 +26,24 @@
                     <div class="d-flex mr-3">
                         <span class="emoji">🐼 </span>
                         <div class="media-body">
-                            <p class="m-0">{{dataValues.user.dataValues.username}}</p>
-                            <small><span>🕒{{dataValues.time}} | {{dataValues.date}}</span></small>
+                            <h3 class="m-0">{{dataValues.user.dataValues.username}}</h3>
+                            <small><span>{{dataValues.time}} | {{dataValues.date}}</span></small>
                         </div>
                     </div>
                 </div>
             </div>
+            <br>
             <div class="body-container">
                 <h3 class="ui teal image header">{{dataValues.title}}</h3><br>
                 <h5 class="ui black image header">{{dataValues.description}}</h4><br>
+                <h5 class="ui black image header">{{dataValues.link_url}}</h4><br>
                     <div class="cardbox-item">
-                        <a href="#myModal{{dataValues.id}}" data-toggle="modal">
                             <img class="img-responsive media" src="{{dataValues.image_url}}">
-                        </a>
                     </div>
             </div>
             <a href="/edit-activity/{{dataValues.id}}">Edit Activity</a>
             <div class="comments">
-                <h1 class="ui black image header">Comments</h1>
+                <h4 class="ui black image header">Comments</h4>
                 {{#each comments as |comment|}}
                 <div>
                     {{comment.dataValues.comment_text}} by {{comment.dataValues.user.dataValues.username}}
@@ -53,11 +52,11 @@
             </div>
             <form class="comment-form" data-postId={{dataValues.id}}>
                 <div>
-                    <textarea name="comment-body" class="comment-area"></textarea>
+                    <textarea name="comment-body" class="comment-area form-control" placeholder="Write your comment..."></textarea>
                 </div>
 
                 <div>
-                    <button type="submit" class="ui fluid large teal submit button">add comment</button>
+                    <button type="submit" class="ui fluid large teal submit button">Post</button>
                 </div>
             </form>
         </div>
