--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,11 +14,11 @@
 					</label>
 					<input type="password" class="form-control" id="password-login" placeholder="Password" />
 				</div>
-				<button class="kafe-btn mint-blue btn-block" type="submit">
+				<button class="ui fluid large teal submit button" type="submit">
 					<h3> Sign in </h3>
 				</button>
 				<br />
-				<a class="btn" href="/sign-up" role="button">Don't have an account yet? Register Here.</a>
+				<a href="/sign-up" role="button">Don't have an account yet? Register Here.</a>
 			</form>
           </div>
         </div>
