--- a/views/sign-up.handlebars
+++ b/views/sign-up.handlebars
@@ -1,7 +1,7 @@
      <section class="login">
       <div class="container">
        <div class="banner-content">
-	   
+	   <img class="image" src="Actively Distanced.png" />
       <form class="signup-form"> <br>
 		   <h3 class="form-signin-heading ui teal image header" >Register your account</h3><br>
 		   <div class="form-group">
@@ -14,9 +14,9 @@
 					</label>
 		      <input type="password" class="form-control" id="password-signup" placeholder="Password" />
 		   </div>
-		   <button class="kafe-btn mint-blue btn-block" type="submit"><h3> Sign up </h3></button>
+		   <button class="ui fluid large teal submit button type="submit"><h3> Sign up </h3></button>
 		   <br/>
-		   <a class="btn" href="/login" role="button">Already have an account? Click here.</a>
+		   <a href="/login" role="button">Already have an account? Click here.</a>
 		  </form>
        </div>
       </div>
