--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,14 +7,24 @@
  * http://opensource.org/licenses/MIT
  *
  */
-
  
+ a:hover {
+  background-color: #00B5AD;
+  height: 100%;
+  width: 100%;
+  border-radius: 50px;
+}
    /* header */
  /*--- Teal ---*/
   
  .ui.teal.header {
   color: #00B5AD !important;
   }
+
+  .ui.white.header {
+    color: #fff !important;
+  }
+
   a.ui.teal.header:hover {
   color: #009c95 !important;
   }
@@ -23,7 +33,7 @@
   }
   .ui.radiant.header {
    font-family: 'Abhaya Libre', serif;
-   font-size: 20px;
+   font-size: 40px;
      background: linear-gradient(to right, #C15858 0%, #3C55FF 100%);
      -webkit-background-clip: text;
      -webkit-text-fill-color: transparent;
@@ -31,22 +41,21 @@
 
   .navbar-brand {
     font-family: 'Abhaya Libre', serif;
-    font-size: 32px;
+    font-size: 40px;
       background: linear-gradient(to left, #30CFD0 0%, #330867 100%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
    }
 
   #category-header {
-    padding-top:20px;
+    padding-top:10px;
     font-family: 'Abhaya Libre', serif;
     font-size: 20px;
-      background: linear-gradient(to right, #C15858 0%, #30CFD0 100%);
+      /* background: linear-gradient(to right, #C15858 0%, #100%); */
+      background: linear-gradient(to left, red,orange,green,blue,indigo);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-
   }
-    
  .ui-segment {
   position: relative;
   background: #f4f4f4;
@@ -124,9 +133,19 @@
  /* button */
  .ui.fluid.buttons,
  .ui.fluid.button {
- width: 100%;
+ width: 100% !important;
  }
 
+ .button-1
+ {
+ background-color: #00B5AD;
+ color: #FFFFFF;
+ text-shadow: none;
+ background-image: none;
+ border-radius: 20px;
+ padding: 10px 30px;
+ margin:5px;
+ }
 
  .button
  {
@@ -141,7 +160,6 @@
  -webkit-box-shadow: 0px 0em 0px 0px rgba(34, 36, 38, 0.15) inset;
         box-shadow: 0px 0em 0px 0px rgba(34, 36, 38, 0.15) inset;
  }
-
 
  .ui.segment {
   position: relative;
@@ -215,11 +233,13 @@
   display: flex !important;
 }
 .nav-sec {
-margin: 0px 0px 0px 0px;
-height: 150px;
-border-top: 0px solid rgba(90, 90, 90, 0.12);
-background-color: #ffffff ;
-box-shadow: 0 -5px 25px 0 rgba(123, 123, 123, 0.15);
+margin:10px;
+padding: 30px;
+height: 100px;
+border-top: 0px solid grey;
+border-radius: 10px;
+background-color: rgb(83, 83, 83) ;
+box-shadow: 0 -5px 25px 0 #00B5AD;
 color: #ffffff;
 }
 
@@ -240,6 +260,7 @@ color: #ffffff;
     display: block;
     max-width: 100%;
     height: auto;
+    border-radius: 50px;
  }
  .fw {
     width: 100% !important;
@@ -270,14 +291,85 @@ color: #ffffff;
   border: 2px solid #fff;
  }
 
+ .form-control {
+  position: relative;
+  height: auto;
+  background-color: white !important;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 10px 10px;
+  font-size: 16px;
+  border-radius: 10px !important;
+ }
+
+span.emoji {
+  font-size: 30px;
+  vertical-align: middle;
+  line-height: 2;
+}
+
+.mint-blue {
+  background-color: #B9D6E0;
+}
+
+
  /* Desktop */
  /* @media (max-width: 1024px){
 } */
 
  /* Tablets */
- /* @media (max-width: 800px){
-} */
+ @media (max-width: 1024px){
+
+ h1,
+ h2,
+ h3,
+ h4,
+ h5 {
+ font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+ line-height: 1 em !important;
+ margin: calc(2rem -  0.14285714em ) 0em 1rem;
+ font-weight: 100 !important;
+ padding: 0em;
+ }
+
+ .nav-sec {
+  margin: 10px 20px 10px 20px;
+  padding: 10px;
+  height: 100px;
+  border-top: 0px solid grey;
+  border-radius: 10px;
+  background-color: rgb(83, 83, 83) ;
+  box-shadow: 0 -5px 25px 0 #00B5AD;;
+  color: #ffffff;
+  }
+
+}
 
 /* Mobile phones */
-/* @media (max-width: 600px)
-} */
+@media (max-width: 480px) {
+
+ h1,
+ h2,
+ h3,
+ h4,
+ h5 {
+ font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+ line-height: 1 em !important;
+ margin: calc(2rem -  0.14285714em ) 0em 1rem;
+ font-weight: 100 !important;
+ padding: 0em;
+ }
+
+ .nav-sec {
+  margin: 10px 10px 10px 10px;
+  padding: 10px;
+  height: 100px;
+  border-top: 0px solid grey;
+  border-radius: 10px;
+  background-color: rgb(83, 83, 83) ;
+  box-shadow: 0 -5px 25px 0 #00B5AD;;
+  color: #ffffff;
+  }
+
+}
