--- a/views/my-activities.handlebars
+++ b/views/my-activities.handlebars
@@ -1,23 +1,3 @@
-<h3 class="ui center aligned header" id="category-header">Trending</h2>
-<div class="ui stackable two column divided grid container">
-  <div class="row">
-    <div class="column">
-      <div class="ui segment">
-            <a href="/outdoor">
-                <h4> #Outdoor Actvities</h4>
-            </a>
-      </div>
-    </div>
-    <div class="column">
-      <div class="ui segment">
-            <a href="/virtual">
-                <h4>#Virtual Actvities</h4>
-            </a>
-      </div>
-    </div>
-  </div>
-</div>
-
 <div class="postbox">
     <div class="col-lg-12">
         {{#each posts as |post|}}
@@ -27,24 +7,24 @@
                     <div class="d-flex mr-3">
                         <span class="emoji">🐼 </span>
                         <div class="media-body">
-                            <p class="m-0">{{dataValues.user.dataValues.username}}</p>
-                            <small><span>🕒{{dataValues.time}} | {{dataValues.date}}</span></small>
+                            <h3 class="m-0">{{dataValues.user.dataValues.username}}</h3>
+                            <small><span>{{dataValues.time}} | {{dataValues.date}}</span></small>
                         </div>
                     </div>
                 </div>
             </div>
+            <br>
             <div class="body-container">
                 <h3 class="ui teal image header">{{dataValues.title}}</h3><br>
                 <h5 class="ui black image header">{{dataValues.description}}</h4><br>
+                <h5 class="ui black image header">{{dataValues.link_url}}</h4><br>
                     <div class="cardbox-item">
-                        <a href="#myModal{{dataValues.id}}" data-toggle="modal">
                             <img class="img-responsive media" src="{{dataValues.image_url}}">
-                        </a>
                     </div>
             </div>
             <a href="/edit-activity/{{dataValues.id}}">Edit Activity</a>
             <div class="comments">
-                <h1 class="ui black image header">Comments</h1>
+                <h4 class="ui black image header">Comments</h4>
                 {{#each comments as |comment|}}
                 <div>
                     {{comment.dataValues.comment_text}} by {{comment.dataValues.user.dataValues.username}}
@@ -53,28 +33,18 @@
             </div>
             <form class="comment-form" data-postId={{dataValues.id}}>
                 <div>
-                    <textarea name="comment-body" class="comment-area"></textarea>
+                    <textarea name="comment-body" class="comment-area form-control" placeholder="Write your comment..."></textarea>
                 </div>
 
                 <div>
-                    <button type="submit" class="ui fluid large teal submit button">add comment</button>
+                    <button type="submit" class="ui fluid large teal submit button">Post</button>
                 </div>
             </form>
-            {{!-- <button type="button" class="like-btn">like</button> --}}
         </div>
         {{/each}}
     </div>
 </div>
-<div class="container">
-    <!-- Trigger the modal with a button -->
-    <a href="#myModal" data-toggle="modal">
-        <img class="img-responsive media" src="{{dataValues.image_url}}">
-    </a>
-    <!-- Modal -->
-</div>
-</div>
 
 <script src="/javascript/comment.js"></script>
-{{!-- <script src="/javascript/likes.js"></script> --}}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
