main handlebars image and icons

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -24,7 +24,7 @@
             <div class="cardbox-heading">
                 <div class="media-profile m-0">
                     <div class="d-flex mr-3">
-                        <span class="emoji">🐼 </span>
+                        <span class="emoji"><i class="user icon"></i></span>
                         <div class="media-body">
                             <h3 class="m-0">{{dataValues.user.dataValues.username}}</h3>
                             <small><span>{{dataValues.time}} | {{dataValues.date}}</span></small>
