--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,8 +1,13 @@
-<section class="login">
-	<div class="container">
-		<div class="banner-content">
 
-			<form class="login-form"><br>
+ <h3 class="ui center aligned header">
+  <div class="ui stackable two column very relaxed grid container" style="position:relative;">
+    <div class="column">
+      <div class="ui segment"><img class="img-responsive" src="/images/logview.png"/></div>
+    </div>
+    <div class="column">
+      <div class="ui segment">
+        <section class="login">
+			  <form class="login-form"><br>
 				<h3 class="form-signin-heading ui teal image header">Login to your account</h3><br>
 				<div class="form-group">
 					<label for="username-login"> Username:</label>
@@ -25,6 +30,7 @@
       </div>
     </div>
   </div>
+ </div>
 </div>
 
 <script src="/javascript/login.js"></script>
