--- a/views/sign-up.handlebars
+++ b/views/sign-up.handlebars
@@ -1,7 +1,11 @@
-     <section class="login">
-      <div class="container">
-       <div class="banner-content">
-	   <img class="image" src="Actively Distanced.png" />
+<h3 class="ui center aligned header">
+  <div class="ui stackable two column very relaxed grid container" style="position:relative;">
+    <div class="column">
+      <div class="ui segment"><img class="img-responsive" src="/images/logview.png"/></div>
+    </div>
+    <div class="column">
+      <div class="ui segment">
+        <section class="signup">
       <form class="signup-form"> <br>
 		   <h3 class="form-signin-heading ui teal image header" >Register your account</h3><br>
 		   <div class="form-group">
@@ -14,12 +18,16 @@
 					</label>
 		      <input type="password" class="form-control" id="password-signup" placeholder="Password" />
 		   </div>
-		   <button class="ui fluid large teal submit button type="submit"><h3> Sign up </h3></button>
+		   <button class="ui fluid large teal submit button" type="submit"><h3> Sign up </h3></button>
 		   <br/>
 		   <a href="/login" role="button">Already have an account? Click here.</a>
 		  </form>
-       </div>
+         </div>
+        </div>
       </div>
-    </section>
+    </div>
+  </div>
+ </div>
+</div>
 
 <script src="/javascript/sign-up.js"></script>
