--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,6 +8,9 @@
  *
  */
  
+ *.icon-white {color: white}
+ *.icon-silver {color: silver}
+
  a:hover {
   background-color: #00B5AD;
   height: 100%;
@@ -233,8 +236,8 @@
   display: flex !important;
 }
 .nav-sec {
-margin:10px;
-padding: 30px;
+margin:30px;
+padding: 40px;
 height: 100px;
 border-top: 0px solid grey;
 border-radius: 10px;
