--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,7 +28,7 @@
             </div>
             {{#if loggedIn}}
             <div class="p-2 nav-icon-lg dark-black">
-                <a class="nav-icon" href="/create-post"><em class="fa fa-plus"></em>
+                <a class="nav-icon" href="/create-activity"><em class="fa fa-plus"></em>
                     <span> + </span>
                     <h3>Add an activity</h3>
                 </a>
