--- a/views/edit-activity.handlebars
+++ b/views/edit-activity.handlebars
@@ -6,11 +6,11 @@
     </h2>
     <form class="edit-activity-form">
       <div class="form-group">
-        <label for="post-title" class="ui teal header">Title</label><br>
-        <input name="post-title" type="text" value="{{post.title}}" />
+        <label for="activity-title" class="ui teal header">Title</label><br>
+        <input name="activity-title" type="text" value="{{activity.title}}" />
       </div>
       <button type="submit" class="kafe-btn mint-blue btn-block">Save activity</button>
-      <button type="button" class="delete-post-btn kafe-btn mint-blue btn-block">Delete activity</button>
+      <button type="button" class="delete-activity-btn kafe-btn mint-blue btn-block">Delete activity</button>
     </form>
   </div>
 </div>
