--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,7 +28,7 @@
 	    </div>
        {{#if loggedIn}}
 	<div class="p-2 nav-icon-lg clean-black">
-	    <a class="nav-icon" href="/create-post">
+	    <a class="nav-icon" href="/create-activity">
         
 	    <h3 class="ui white image header"> <i class="plus icon icon-white"></i> Activity</h3>
 	    </a>
