--- a/views/create-activity.handlebars
+++ b/views/create-activity.handlebars
@@ -12,8 +12,8 @@
           <h4 class="ui teal image header"><label for="description">Description</label></h4><br>
           <input type="text" id="description" name="description" placeholder="Describe your event..."><br>
 
-          <h4 class="ui teal image header"><label for="photo">Upload a photo</label></h4><br>
-          <input type="file" id="description-bar" name="photo" /><br>
+          <h4 class="ui teal image header"><label for="image_url">Upload a photo</label></h4><br>
+          <input type="file" id="description-bar" name="image_url" /><br>
 
           <h4 class="ui teal image header"><label for="date">Choose a date for your event:</label></h4>
           <input type="date" id="date" name="date"><br>
@@ -22,14 +22,14 @@
           <input type="time" id="time" name="time" min="08:00" max="23:00" required><br>
 
           <h4 class="ui teal image header"><label for="url">Link (virtual activity)</label></h4><br>
-          <input type="url" id="url" name="url" placeholder="Add URL for the virtual meetup" /><br>
+          <input type="url" id="url" name="link" placeholder="Add URL for the virtual meetup" /><br>
           
           <h4 class="ui teal image header"><label for="quantity">Group Size</label></h4><br>
-          <input type="number" id="quantity" name="group" placeholder="How many people can join your activity?" /><br><br>
+          <input type="number" id="quantity" name="group_size" placeholder="How many people can join your activity?" /><br><br>
           
           <h4 class="ui teal image header"><label for="title">Activity Type</label></h4><br>
-          <input  type="radio" value="outdoor" name="tag"> Outdoor Activity<br>
-          <input type="radio" value="virtual" name="tag"> Virtual Activity<br><br>
+          <input  type="radio" value="true" name="activity_type"> Outdoor Activity<br>
+          <input type="radio" value="false" name="activity_type"> Virtual Activity<br><br>
 
           <input type="submit" value="Submit" class="ui fluid large teal submit button">
         </div>
