--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -17,9 +17,19 @@
     </div>
 </div> --}}
 
+
+ <div class="ui stackable two column divided grid container">
+    <div class="row">
+        <div class="column">
+            <div class="ui-segment">
+            <a href="/outdoor">
+    <h3 class="ui center aligned header" id="category-header">Outdoor Activity</h3>            </a>
+            </div>
+        </div>
 <div class="postbox">
     <div class="col-lg-12">
-        {{#each posts as |post|}}
+        {{#each activities as |activity|}}
+        {{#if activity_type}}
         <div class="cardbox">
             <div class="cardbox-heading">
                 <div class="media-profile m-0">
@@ -50,7 +60,7 @@
                 </div>
                 {{/each}}
             </div>
-            <form class="comment-form" data-postId={{dataValues.id}}>
+            <form class="comment-form" data-activityId={{dataValues.id}}>
                 <div>
                     <textarea name="comment-body" class="comment-area form-control" placeholder="Write your comment..."></textarea>
                 </div>
@@ -60,9 +70,11 @@
                 </div>
             </form>
         </div>
+         {{/if}}
         {{/each}}
     </div>
 </div>
+
 
 <script src="/javascript/comment.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
