--- a/views/my-activities.handlebars
+++ b/views/my-activities.handlebars
@@ -15,12 +15,16 @@
             </div>
             <br>
             <div class="body-container">
-                <h3 class="ui teal image header">{{dataValues.title}}</h3><br>
-                <h5 class="ui black image header">{{dataValues.description}}</h4><br>
-                <h5 class="ui black image header">{{dataValues.link_url}}</h4><br>
-                    <div class="cardbox-item">
-                            <img class="img-responsive media" src="{{dataValues.image_url}}">
-                    </div>
+                <h3 class="ui teal image header">Activity Type: {{dataValues.activity_type}}</h3><br>
+                <h3 class="ui teal image header">Title: {{dataValues.title}}</h3><br>
+                <h3 class="ui black image header">Description: {{dataValues.description}}</h3><br>
+                <a href={{dataValues.link}} target="_blank">
+                    <h3 class="ui black image header">Activity Link</h3>
+                </a><br>
+                <div class="cardbox-item">
+                    <img class="img-responsive media" src="{{dataValues.image_url}}">
+                </div>
+                <h3 class="ui black image header">Group Size: {{dataValues.group_size}}</h3><br>
             </div>
             <a href="/edit-activity/{{dataValues.id}}">Edit Activity</a>
             <div class="comments">
@@ -31,15 +35,6 @@
                 </div>
                 {{/each}}
             </div>
-            <form class="comment-form" data-activityId={{dataValues.id}}>
-                <div>
-                    <textarea name="comment-body" class="comment-area form-control" placeholder="Write your comment..."></textarea>
-                </div>
-
-                <div>
-                    <button type="submit" class="ui fluid large teal submit button">Post</button>
-                </div>
-            </form>
         </div>
         {{/each}}
     </div>
