--- a/views/my-activities.handlebars
+++ b/views/my-activities.handlebars
@@ -1,42 +1,46 @@
-<div class="postbox">
-    <div class="col-lg-12">
-        {{#each activities as |activity|}}
-        <div class="cardbox">
-            <div class="cardbox-heading">
-                <div class="media-profile m-0">
-                    <div class="d-flex mr-3">
-                        <span class="emoji"><i class="user icon"></i></span>
-                        <div class="media-body">
-                            <h3 class="m-0">{{dataValues.user.dataValues.username}}</h3>
-                            <small><span>{{dataValues.time}} | {{dataValues.date}}</span></small>
+<div class="ui stackable two column divided grid container">
+    <div class="row">
+        <div class="postbox">
+            <div class="col-lg-12">
+                {{#each activities as |activity|}}
+                <div class="cardbox">
+                    <div class="cardbox-heading">
+                        <div class="media-profile m-0">
+                            <div class="d-flex mr-3">
+                                <span class="emoji"><i class="user icon"></i></span>
+                                <div class="media-body">
+                                    <h3 class="m-0">{{dataValues.user.dataValues.username}}</h3>
+                                    <small><span>{{dataValues.time}} | {{dataValues.date}}</span></small>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <br>
-            <div class="body-container">
-                <h3 class="ui teal image header">Activity Type: {{dataValues.activity_type}}</h3><br>
-                <h3 class="ui teal image header">Title: {{dataValues.title}}</h3><br>
-                <h3 class="ui black image header">Description: {{dataValues.description}}</h3><br>
-                <a href={{dataValues.link}} target="_blank">
-                    <h3 class="ui black image header">Activity Link</h3>
-                </a><br>
-                <div class="cardbox-item">
-                    <img class="img-responsive media" src="{{dataValues.image_url}}">
-                </div>
-                <h3 class="ui black image header">Group Size: {{dataValues.group_size}}</h3><br>
-            </div>
-            <a href="/edit-activity/{{dataValues.id}}">Edit Activity</a>
-            <div class="comments">
-                <h4 class="ui black image header">Comments</h4>
-                {{#each comments as |comment|}}
-                <div>
-                    {{comment.dataValues.comment_text}} by {{comment.dataValues.user.dataValues.username}}
+                    <br>
+                    <div class="body-container">
+                        <h3 class="ui teal image header">Activity Type: {{dataValues.activity_type}}</h3><br>
+                        <h3 class="ui teal image header">Title: {{dataValues.title}}</h3><br>
+                        <h3 class="ui black image header">Description: {{dataValues.description}}</h3><br>
+                        <a href={{dataValues.link}} target="_blank">
+                            <h3 class="ui black image header">Activity Link</h3>
+                        </a><br>
+                        <div class="cardbox-item">
+                            <img class="img-responsive media" src="{{dataValues.image_url}}">
+                        </div>
+                        <h3 class="ui black image header">Group Size: {{dataValues.group_size}}</h3><br>
+                    </div>
+                    <a href="/edit-activity/{{dataValues.id}}">Edit Activity</a>
+                    <div class="comments">
+                        <h4 class="ui black image header">Comments</h4>
+                        {{#each comments as |comment|}}
+                        <div>
+                            {{comment.dataValues.comment_text}} by {{comment.dataValues.user.dataValues.username}}
+                        </div>
+                        {{/each}}
+                    </div>
                 </div>
                 {{/each}}
             </div>
         </div>
-        {{/each}}
     </div>
 </div>
 
