--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -19,17 +19,17 @@
 
 <div class="ui stackable two column divided grid container">
     <div class="row">
-        <div class="column">
+        {{!-- <div class="column">
             <div class="ui-segment">
                 <a href="/outdoor">
                     <h3 class="ui center aligned header" id="category-header">Outdoor Activity</h3>
                 </a>
             </div>
-        </div>
+        </div> --}}
         <div class="postbox">
             <div class="col-lg-12">
                 {{#each activities as |activity|}}
-                {{#if dataValues.activity_type}}
+                {{!-- {{#if activity_type dataValues.activity_type activity}} --}}
                 <div class="cardbox">
                     <div class="cardbox-heading">
                         <div class="media-profile m-0">
@@ -74,7 +74,7 @@
                         </div>
                     </form>
                 </div>
-                {{/if}}
+                {{!-- {{/if}} --}}
                 {{/each}}
             </div>
         </div>
