--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,4 @@
-<h3 class="ui center aligned header" id="category-header">Sort by</h3>
+<h3 class="ui center aligned header" id="category-header">Filter by</h3>
 <div class="ui stackable two column divided grid container">
     <div class="row">
         <div class="column">
@@ -31,23 +31,23 @@
                                 <span class="emoji"><i class="user icon"></i></span>
                                 <div class="media-body">
                                     <h3 class="m-0">{{dataValues.user.dataValues.username}}</h3>
-                                    <small><span>{{dataValues.time}} | {{dataValues.date}}</span></small>
+                                    <small><span>{{dataValues.time}} | {{dataValues.date}}</span></small><br>
+                                   <small><span><h5 class="ui color image header">Activity Type:{{dataValues.activity_type}}</h5></span></small>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <br>
                     <div class="body-container">
-                        <h3 class="ui teal image header">Activity Type: {{dataValues.activity_type}}</h3><br>
-                        <h3 class="ui teal image header">Title: {{dataValues.title}}</h3><br>
-                        <h3 class="ui black image header">Description: {{dataValues.description}}</h3><br>
+                        <h4 class="ui blue image header">Title: </h4><p>{{dataValues.title}}</p>
+                        <h4 class="ui blue image header">Description: </h4><p>{{dataValues.description}}</p>
                         <a href={{dataValues.link}} target="_blank">
-                            <h3 class="ui black image header">Activity Link</h3>
+                            <h5 class="ui blue image header">Activity Link</h3>
                         </a><br>
                         <div class="cardbox-item">
                             <img class="img-responsive media" src="{{dataValues.image_url}}">
                         </div>
-                        <h3 class="ui black image header">Group Size: {{dataValues.group_size}}</h3><br>
+                        <h4 class="ui blue image header">Group Size: {{dataValues.group_size}}</4><br><br>
                     </div>
                     <div class="comments">
                         <h4 class="ui black image header">Comments</h4>
