--- a/views/edit-activity.handlebars
+++ b/views/edit-activity.handlebars
@@ -34,8 +34,8 @@
           Activity<br>
           <input type="radio" value="Virtual" name="activity_type" value="{{activity.activity_type}}" /> Virtual
           Activity<br><br> --}}
-        <button type="submit" class="kafe-btn mint-blue btn-block">Save activity</button>
-        <button type="button" class="delete-activity-btn kafe-btn mint-blue btn-block">Delete activity</button>
+        <button type="submit" class="ui fluid large teal submit button">Save activity</button>
+        <button type="button" class="delete-activity-btn ui fluid large teal submit button">Delete activity</button>
     </form>
   </div>
 </div>
