--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,7 +10,7 @@
 			  <form class="login-form"><br>
 				<h3 class="form-signin-heading ui teal image header">Login to your account</h3><br>
 				<div class="form-group">
-					<label for="username-login"> Username:</label>
+					<h3><label for="username-login"> Username:</label></h3>
 					<input type="text" id="username-login" type="text" class="form-control" placeholder="Username" />
 				</div>
 				<div class="form-group">
