--- a/views/my-activities.handlebars
+++ b/views/my-activities.handlebars
@@ -3,6 +3,7 @@
         <div class="postbox">
             <div class="col-lg-12">
                 {{#each activities as |activity|}}
+                {{!-- {{#if activity_type dataValues.activity_type activity}} --}}
                 <div class="cardbox">
                     <div class="cardbox-heading">
                         <div class="media-profile m-0">
@@ -10,25 +11,24 @@
                                 <span class="emoji"><i class="user icon"></i></span>
                                 <div class="media-body">
                                     <h3 class="m-0">{{dataValues.user.dataValues.username}}</h3>
-                                    <small><span>{{dataValues.time}} | {{dataValues.date}}</span></small>
+                                    <small><span>{{dataValues.time}} | {{dataValues.date}}</span></small><br>
+                                   <small><span><h5 class="ui color image header">Activity Type:{{dataValues.activity_type}}</h5></span></small>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <br>
                     <div class="body-container">
-                        <h3 class="ui teal image header">Activity Type: {{dataValues.activity_type}}</h3><br>
-                        <h3 class="ui teal image header">Title: {{dataValues.title}}</h3><br>
-                        <h3 class="ui black image header">Description: {{dataValues.description}}</h3><br>
+                        <h4 class="ui blue image header">Title: </h4><p>{{dataValues.title}}</p>
+                        <h4 class="ui blue image header">Description: </h4><p>{{dataValues.description}}</p>
                         <a href={{dataValues.link}} target="_blank">
-                            <h3 class="ui black image header">Activity Link</h3>
+                            <h5 class="ui blue image header">Activity Link</h3>
                         </a><br>
                         <div class="cardbox-item">
                             <img class="img-responsive media" src="{{dataValues.image_url}}">
                         </div>
-                        <h3 class="ui black image header">Group Size: {{dataValues.group_size}}</h3><br>
+                        <h4 class="ui blue image header">Group Size: {{dataValues.group_size}}</4><br><br>
                     </div>
-                    <a href="/edit-activity/{{dataValues.id}}">Edit Activity</a>
                     <div class="comments">
                         <h4 class="ui black image header">Comments</h4>
                         {{#each comments as |comment|}}
@@ -37,7 +37,18 @@
                         </div>
                         {{/each}}
                     </div>
+                    <form class="comment-form" data-activityId={{dataValues.id}}>
+                        <div>
+                              <textarea name="comment-body" class="comment-area form-control" id="comment" 
+                                placeholder="Write your comment..."></textarea>
+                        </div>
+
+                        <div>
+                            <button type="submit" class="ui fluid large teal submit button">Post</button>
+                        </div>
+                    </form>
                 </div>
+                {{!-- {{/if}} --}}
                 {{/each}}
             </div>
         </div>
