--- a/views/my-activities.handlebars
+++ b/views/my-activities.handlebars
@@ -3,7 +3,6 @@
         <div class="postbox">
             <div class="col-lg-12">
                 {{#each activities as |activity|}}
-                {{!-- {{#if activity_type dataValues.activity_type activity}} --}}
                 <div class="cardbox">
                     <div class="cardbox-heading">
                         <div class="media-profile m-0">
@@ -34,7 +33,6 @@
                         </div>
                         <h4 class="ui blue image header">Group Size: {{dataValues.group_size}}</4><br><br>
                     </div>
-                    <a href="/edit-activity/{{dataValues.id}}">Edit Activity</a>
                     <div class="comments">
                         <h4 class="ui black image header">Comments</h4>
                         {{#each comments as |comment|}}
@@ -45,27 +43,27 @@
                     </div>
                     <form class="comment-form" data-activity-id={{dataValues.id}}>
                         <div>
-                            <textarea name="comment-body" class="comment-area form-control" id="comment"
+                            <textarea name="comment-body" class="comment-area form-control" id={{dataValues.id}}
                                 placeholder="Write your comment..."></textarea>
                         </div>
 
                         <div>
-                            <button type="submit" class="ui fluid large teal submit button">Post</button>
+                            <button type="button" onclick="commentFormHandler({{dataValues.id}})"
+                                class="ui fluid large teal submit button">Post</button>
                         </div>
                     </form>
-                {{!-- share on social media  --}}
-                <div id="share-buttons">
-                    <!-- Share via Email -->
-                    <a href="mailto:?Subject=Join this activity&amp;Body=I%20saw%20this%20and%20thought%20of%20you!%20 https://actively-distanced.herokuapp.com/{{dataValues.id}}">
-                    <img src="https://simplesharebuttons.com/images/somacro/email.png" alt="Email" />
-                    </a>
-                    <!-- Share on Facebook -->
-                    <a href="http://www.facebook.com/sharer.php?u=https://actively-distanced.herokuapp.com/{{dataValues.id}}" target="_blank">
-                    <img src="https://simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" />
-                    </a>
+                    <div id="share-buttons">
+                        <a
+                            href="mailto:?Subject=Join this activity&amp;Body=I%20saw%20this%20and%20thought%20of%20you!%20 https://actively-distanced.herokuapp.com/{{dataValues.id}}">
+                            <img src="https://simplesharebuttons.com/images/somacro/email.png" alt="Email" />
+                        </a>
+                        <!-- Share on Facebook -->
+                        <a href="http://www.facebook.com/sharer.php?u=https://actively-distanced.herokuapp.com/{{dataValues.id}}"
+                            target="_blank">
+                            <img src="https://simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" />
+                        </a>
                     </div>
                 </div>
-                {{!-- {{/if}} --}}
                 {{/each}}
             </div>
         </div>
