--- a/views/my-activities.handlebars
+++ b/views/my-activities.handlebars
@@ -54,11 +54,11 @@
                     </form>
                     <div id="share-buttons">
                         <a
-                            href="mailto:?Subject=Join this activity&amp;Body=I%20saw%20this%20and%20thought%20of%20you!%20 https://actively-distanced.herokuapp.com/{{dataValues.id}}">
+                            href="mailto:?Subject=Join this activity&amp;Body=I%20saw%20this%20and%20thought%20of%20you!%20 https://actively-distanced.herokuapp.com/">
                             <img src="https://simplesharebuttons.com/images/somacro/email.png" alt="Email" />
                         </a>
                         <!-- Share on Facebook -->
-                        <a href="http://www.facebook.com/sharer.php?u=https://actively-distanced.herokuapp.com/{{dataValues.id}}"
+                        <a href="http://www.facebook.com/sharer.php?u=https://actively-distanced.herokuapp.com/"
                             target="_blank">
                             <img src="https://simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" />
                         </a>
