--- a/views/create-activity.handlebars
+++ b/views/create-activity.handlebars
@@ -3,32 +3,34 @@
     <h3 class="ui center aligned header" id="category-header">Create an activity</h3>
 
     <div action="/profile" method="post" enctype="multipart/form-data" class="ui large form">
-      <form action="/profile" method="post" enctype="multipart/form-data" class="ui large form">
+      <form action="/profile" method="post" enctype="multipart/form-data" class="ui large form" id="usrform">
         <div class="ui stacked segment">
-          <h4 class="ui teal image header"><label for="title">Title</label></h4><br>
+          <h4 class="ui teal image header"><label for="title">Title (required)</label></h4><br>
           <input type="text" id="title" name="title" placeholder="Name your activity for people to join..."
             required><br>
 
-          <h4 class="ui teal image header"><label for="description">Description</label></h4><br>
-          <input type="text" id="description" name="description" placeholder="Describe your event..." required><br>
+          <h4 class="ui teal image header"><label for="description">Description (required)</label></h4><br>
+          {{!-- <input type="text" id="description" name="description" placeholder="Describe your event..." required><br> --}}
+          <textarea rows="4" cols="50" name="description" form="usrform"
+            placeholder="Describe your event..."></textarea><br>
 
-          <h4 class="ui teal image header"><label for="image_url">Upload a photo</label></h4><br>
-          <input type="file" id="description-bar" name="image_url" /><br>
+          <h4 class="ui teal image header"><label for="image_url">Upload a photo (required)</label></h4><br>
+          <input type="file" id="description-bar" name="image_url" required><br>
 
-          <h4 class="ui teal image header"><label for="date">Choose a date for your event:</label></h4>
+          <h4 class="ui teal image header"><label for="date">Choose a date for your event: (required)</label></h4>
           <input type="date" id="date" name="date" required><br>
 
-          <h4 class="ui teal image header"><label for="time">Choose a time for your event:</label></h4>
+          <h4 class="ui teal image header"><label for="time">Choose a time for your event: (required)</label></h4>
           <input type="time" id="time" name="time" required><br>
 
-          <h4 class="ui teal image header"><label for="url">Link (virtual activity)</label></h4><br>
-          <input type="url" id="url" name="link" placeholder="Add URL for the virtual meetup" /><br>
+          <h4 class="ui teal image header"><label for="url">Link (required)</label></h4><br>
+          <input type="url" id="url" name="link" placeholder="Add URL for the virtual meetup" required><br>
 
-          <h4 class="ui teal image header"><label for="quantity">Group Size</label></h4><br>
+          <h4 class="ui teal image header"><label for="quantity">Group Size (required)</label></h4><br>
           <input type="number" id="quantity" name="group_size"
-            placeholder="How many people can join your activity?" /><br><br>
+            placeholder="How many people can join your activity?"><br><br>
 
-          <h4 class="ui teal image header"><label for="title">Activity Type</label></h4><br>
+          <h4 class="ui teal image header"><label for="title">Activity Type (required)</label></h4><br>
           <input type="radio" value="Outdoor" name="activity_type"> Outdoor Activity<br>
           <input type="radio" value="Virtual" name="activity_type"> Virtual Activity<br><br>
 
@@ -38,43 +40,3 @@
     </div>
   </div>
 </div>
-
-
- {{!-- <div class="ui middle aligned center aligned grid">
-  <div class="column">
-    <h3 class="ui center aligned header" id="category-header">Create an activity</h3>
-
-     <div action="/profile" method="post" enctype="multipart/form-data" class="ui large form">
-      <form action="/profile" method="post" enctype="multipart/form-data" class="ui large form">
-        <div class="ui stacked segment">
-          <h4 class="ui teal image header"><label for="title">Title</label></h4><br>
-          <input type="text" id="title" name="title" placeholder="Name your activity for people to join..."><br>
-
-          <h4 class="ui teal image header"><label for="description">Description</label></h4><br>
-          <input type="text" id="description" name="description" placeholder="Describe your event..."><br>
-
-          <h4 class="ui teal image header"><label for="photo">Upload a photo</label></h4><br>
-           <input type="file" id="description-bar" name="photo" /><br>
-
-          <h4 class="ui teal image header"><label for="date">Choose a date for your event:</label></h4>
-          <input type="date" id="date" name="date"><br>
-
-          <h4 class="ui teal image header"><label for="time">Choose a time for your event:</label></h4>
-          <input type="time" id="time" name="time" min="08:00" max="23:00" required><br>
-
-          <h4 class="ui teal image header"><label for="description">Location or Link (virtual activity)</label></h4><br>
-          <input type="text" id="description-bar" name="description" placeholder="Add an address for the event or URL for the virtual meetup" /><br>
-          
-          <h4 class="ui teal image header"><label for="quantity">Group Size</label></h4><br>
-          <input type="number" id="quantity" name="group" placeholder="How many people can join your activity?" /><br><br>
-          
-          <h4 class="ui teal image header"><label for="title">Activity Type</label></h4><br>
-          <input  type="radio" value="outdoor" name="tag"> Outdoor Activity<br>
-          <input type="radio" value="virtual" name="tag"> Virtual Activity<br><br>
-          
-          <input type="submit" value="Submit" class="ui fluid large teal submit button">
-        </div>
-      </form>
-    </div>
-  </div>
-</div> --}}
