--- a/views/create-activity.handlebars
+++ b/views/create-activity.handlebars
@@ -10,9 +10,9 @@
             required><br>
 
           <h4 class="ui teal image header"><label for="description">Description (required)</label></h4><br>
-          {{!-- <input type="text" id="description" name="description" placeholder="Describe your event..." required><br> --}}
-          <textarea rows="4" cols="50" name="description" form="usrform"
-            placeholder="Describe your event..."></textarea><br>
+          <input type="text" id="description" name="description" placeholder="Describe your event..." required><br>
+          {{!-- <textarea rows="4" cols="50" name="description" form="usrform"
+            placeholder="Describe your event..."></textarea><br> --}}
 
           <h4 class="ui teal image header"><label for="image_url">Upload a photo (required)</label></h4><br>
           <input type="file" id="description-bar" name="image_url" required><br>
