edit activity save and delete icon

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,6 +7,9 @@
  * http://opensource.org/licenses/MIT
  *
  */
+
+ #more {display: none;}
+
  
  *.icon-white {color: white}
  *.icon-silver {color: silver}
