--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -44,7 +44,7 @@
                         <h4 class="ui blue image header">Title: </h4>
                         <p>{{dataValues.title}}</p>
                         <h4 class="ui blue image header">Description: </h4>
-                        <p>{{dataValues.description}}</p>
+                        <p>{{dataValues.description}}</p><br>
                         <a href={{dataValues.link}} target="_blank">
                             <h5 class="ui blue image header">Activity Link</h3>
                         </a><br><br>
@@ -89,7 +89,23 @@
         </div>
     </div>
 </div>
+<script>
+    function myFunction() {
+  var dots = document.getElementById("dots");
+  var moreText = document.getElementById("more");
+  var btnText = document.getElementById("myBtn");
 
+  if (dots.style.display === "none") {
+    dots.style.display = "inline";
+    btnText.innerHTML = "Read more";
+    moreText.style.display = "none";
+  } else {
+    dots.style.display = "none";
+    btnText.innerHTML = "Read less";
+    moreText.style.display = "inline";
+  }
+}
+</script>
 <script src="/javascript/comment.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
