--- a/views/my-activities.handlebars
+++ b/views/my-activities.handlebars
@@ -33,6 +33,7 @@
                         </div>
                         <h4 class="ui blue image header">Group Size: {{dataValues.group_size}}</4><br><br>
                     </div>
+                    <a href="/edit-activity/{{dataValues.id}}">Edit Activity</a>
                     <div class="comments">
                         <h4 class="ui black image header">Comments</h4>
                         {{#each comments as |comment|}}
@@ -54,11 +55,11 @@
                     </form>
                     <div id="share-buttons">
                         <a
-                            href="mailto:?Subject=Join this activity&amp;Body=I%20saw%20this%20and%20thought%20of%20you!%20 https://actively-distanced.herokuapp.com/{{dataValues.id}}">
+                            href="mailto:?Subject=Join this activity&amp;Body=I%20saw%20this%20and%20thought%20of%20you!%20 https://actively-distanced.herokuapp.com/">
                             <img src="https://simplesharebuttons.com/images/somacro/email.png" alt="Email" />
                         </a>
                         <!-- Share on Facebook -->
-                        <a href="http://www.facebook.com/sharer.php?u=https://actively-distanced.herokuapp.com/{{dataValues.id}}"
+                        <a href="http://www.facebook.com/sharer.php?u=https://actively-distanced.herokuapp.com/"
                             target="_blank">
                             <img src="https://simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" />
                         </a>
